# multi-AI-Harness

./: .gitignore  README.md  index.html  package-lock.json  package.json  project.example.json
src/: api.ts  keyboard.ts  main.ts  modal.ts  newproject.ts  sidebar.ts  styles.css  taskbar.ts  terminals.ts  types.ts  voice.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  core.rs  events.rs  launcher.rs  lib.rs  model.rs  monitor.rs  protocol.rs  ring.rs  scheduler.rs  session.rs  storage.rs
